--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingTop="20dp">
 
     <com.sd.lib.cloading.view.FLinearColorLoadingView
-        android:id="@+id/view_loading"
+        android:id="@+id/view_loading_horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp" />
+
+    <com.sd.lib.cloading.view.FLinearColorLoadingView
+        android:id="@+id/view_loading_vertical"
+        android:layout_width="1dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
