--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,8 @@
     android:paddingTop="20dp">
 
     <com.sd.lib.cloading.view.FLinearColorLoadingView
-        android:id="@+id/view_loading_horizontal"
+        android:id="@+id/view_loading"
         android:layout_width="match_parent"
         android:layout_height="5dp" />
-
-    <com.sd.lib.cloading.view.FLinearColorLoadingView
-        android:id="@+id/view_loading_vertical"
-        android:layout_width="5dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="20dp" />
 
 </LinearLayout>
